--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,5 +31,8 @@ flutter:
     - family: Pacifico
       fonts:
         - asset: fonts/Pacifico-Regular.ttf
+    - family: Lato
+      fonts:
+        - asset: fonts/Lato-Regular.ttf
 
   # see https://flutter.dev/custom-fonts/#from-packages
